# tonoka

./: CMakeLists.txt  README.md  build-osx.sh  build.bat  build.sh
src/: dcm2img.cpp  dicomscanner.cpp  dicomscanner.h  dicomsender.cpp  dicomsender.h  engine.cpp  engine.h  gui.cpp  gui.h  main.cpp  patientdata.cpp  patientdata.h  tonoka_about.cpp  tonoka_about.h  tonoka_destination.cpp  tonoka_destination.h  tonoka_mainFrame.cpp  tonoka_mainFrame.h  tonoka_searchStatus.cpp  tonoka_searchStatus.h  tonoka_sendStatus.cpp  tonoka_sendStatus.h  tonoka_updateCheck.cpp  tonoka_updateCheck.h  update.cpp  update.h
src/gui/: gui.fbp
src/win/: tonoka.rc  version.rc
